# sc2-driver-io

./: .gitignore  CMakeLists.txt  EVOLUTION_PLAN.md  README.md  main.cpp  main.py  mock_messages.py  read_can_messages.py  readme.md  send_messages.py  system_health.json  telemetry_data.json
DataProcessor/: dataUnpacker.cpp  dataUnpacker.h
api/: main.py
backend/: backendProcesses.h  dataFetcher.h
backend/telemetrylib/: DTI.h  telemetry.cpp  telemetry.h
can-snooper/: .gitmodules  CSV_WRITER_README.md  requirements.txt  test_csv_writer.py
can-snooper/api/: main.py
can-snooper/can_utils/: csv_writer.py  read_can_messages.py
can-snooper/frontend/: package-lock.json
can-snooper/frontend/src/: App.jsx
can-snooper/frontend/src/components/: MessageBlock.jsx  MessageList.jsx
can_utils/: data_classes.py  read_can_messages.py  send_messages.py
docs/: ARCHITECTURE.md  DASHBOARD_DEMO.md  DASHBOARD_INTEGRATION.md  PI_DEPLOYMENT.md  README.md  WORKFLOW_SUMMARY.md
frontend/: package.json
textual_frontend/: README.md  TEXTUAL_DASHBOARD.md  dashboard.css  dashboard_launcher.py  setup_autolaunch.sh  textual_dashboard.py  textual_requirements.txt
